ingress/example-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - hello-world.info
    secretName: hello-service-secret
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 80
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 8081
